@startuml
'https://plantuml.com/class-diagram

skinparam monochrome true

interface GatewayRequestInterface {
    public toPsrRequest(): RequestInterface
    public getCensoredBody(): ?StreamInterface
    public getCensoredHeaders(): array
    public getCensoredUri(): UriInterface
}

abstract class AbstractGatewayRequest {
    protected getMethod(): HttpMethod
    protected getUri(): UriInterface
    protected getHeaders(): array
    protected getBody(): ?StreamInterface
    final protected createRequest(): RequestInterface
}

interface GatewayInterface {
    public sendRequest(): GatewayDomainResponseInterface;
}

class Gateway {
}

interface GatewayResponseInterface {
    public isSuccessful(): bool
}

interface EndpointResponseInterface {
    public getStatusCode(): StatusCode
    public getBody(): StreamInterface
    public getHeaders(): array
}

interface EndpointResponse {
}

interface DomainResponseInterface {
    public function getResponseBody();
}

note left of AbstractGatewayRequest::createRequest
    Template method pattern
    Uses:
        AbstractGatewayRequest::getMethod()
        AbstractGatewayRequest::getUri()
        AbstractGatewayRequest::getHeaders()
        AbstractGatewayRequest::getBody()
end note

interface AdapterInterface {
    public send(): EndpointResponseInterface
}

class GuzzleAdapter {

}

interface ResponseDomainMapperInterface {
    public mapToDomain(): DomainResponseInterface;
}

interface GatewayLoggerInterface {
    public logRequestResponsePair(): void
    public logRequestException(): void
}

class CommunicationLogger {
}

GatewayRequestInterface <|.. AbstractGatewayRequest
GatewayInterface <|.. Gateway
GatewayResponseInterface <|-- EndpointResponseInterface
GatewayResponseInterface <|-- DomainResponseInterface
AdapterInterface <|.. GuzzleAdapter
Gateway *-- AdapterInterface
Gateway *-- ResponseDomainMapperInterface
Gateway *-- GatewayLoggerInterface
ResponseDomainMapperInterface *-- DomainResponseInterface
DomainResponseInterface <|.. ErrorResponse
DomainResponseInterface <|.. SimpleResponse
EndpointResponseInterface <|.. EndpointResponse
GatewayLoggerInterface <|.. CommunicationLogger

@enduml
